# apache-airflow-providers-normalizer

./: .gitignore  README.md  pyproject.toml
airflow/providers/normalizer/: provider.yaml
airflow/providers/normalizer/operators/: normalizer.py  queries.py  utils.py
tests/operators/: test_normalizer_operator.py
